--- a/aboutus.html
+++ b/aboutus.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/aboutus.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="aboutus.css">
     <title>About Us</title>
 </head>
 
@@ -16,26 +16,26 @@
                 Sweet Love Desserts
             </h2>
             <p class="logo">
-                <img src="/img/logo.png" alt="logo">
+                <img src="logo.png" alt="logo">
             </p>
         </div>
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="/index.html" title="Home" class="home">Home</a>
+                    <a href="index.html" title="Home" class="home">Home</a>
                 </li>
                 <li>
-                    <a href="/html/desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
+                    <a href="desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
                 </li>
                 <li>
-                    <a href="/html/aboutus.html" title="Sobre" class="sobre">Sobre</a>
+                    <a href="aboutus.html" title="Sobre" class="sobre">Sobre</a>
                 </li>
             </ul>
         </nav>
     </header>
     <h3>Sobre Nós</h3>
     <section class="about">
-        <img src="/img/loja.jpg" alt="loja" class="loja">
+        <img src="loja.jpg" alt="loja" class="loja">
         <div class="about-us_description">
             <p>
                 Bem-vindo à nossa confeitaria, um verdadeiro paraíso dos sabores desde 2010! Aqui, dedicamos
@@ -72,7 +72,7 @@
     <footer>
         <nav class="rodape">
             <figure class="logo_rodape">
-                <img src="/img/logo.png" alt="logo rodape">
+                <img src="logo.png" alt="logo rodape">
             </figure>
             <h3>Localização</h3>
             <section class="mapa">
