--- a/desserts.html
+++ b/desserts.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/global.css">
-    <link rel="stylesheet" href="/css/desserts.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="desserts.css">
     <title>Desserts</title>
 </head>
 
@@ -17,19 +17,19 @@
                 Sweet Love Desserts
             </h2>
             <p class="logo">
-                <img src="/img/logo.png" alt="logo">
+                <img src="logo.png" alt="logo">
             </p>
         </div>
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="/index.html" title="Home" class="home">Home</a>
+                    <a href="index.html" title="Home" class="home">Home</a>
                 </li>
                 <li>
-                    <a href="/html/desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
+                    <a href="desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
                 </li>
                 <li>
-                    <a href="/html/aboutus.html" title="Sobre" class="sobre">Sobre</a>
+                    <a href="aboutus.html" title="Sobre" class="sobre">Sobre</a>
                 </li>
             </ul>
         </nav>
@@ -38,7 +38,7 @@
 
     <main class="desserts">
         <section class="cakes">
-            <img src="/img/cake1.jpg" alt="cake1" class="img-cake">
+            <img src="cake1.jpg" alt="cake1" class="img-cake">
             <div class="description_desserts">
                 <h3>Cakes</h3>
                 <p class="price"> R$ 18,00 Fatia</p>
@@ -53,7 +53,7 @@
         </section>
 
         <section class="macarons">
-            <img src="/img/macarons2.jpg" alt="macarons2" class="img-macarons">
+            <img src="macarons2.jpg" alt="macarons2" class="img-macarons">
             <div class="description_desserts">
                 <h3>Macarons</h3>
                 <p class="price">R$ 5,00 Unidade</p>
@@ -68,7 +68,7 @@
         </section>
 
         <section class="donuts">
-            <img src="/img/donuts.jpg" alt="donuts" class="img-donuts">
+            <img src="donuts.jpg" alt="donuts" class="img-donuts">
             <div class="description_desserts">
                 <h3>Donuts</h3>
                 <p class="price">R$ 6,00 Unidade</p>
@@ -84,7 +84,7 @@
         </section>
 
         <section class="cupcakes">
-            <img src="/img/cupcakes1.jpg" alt="cupcakes1" class="img-cupcake">
+            <img src="cupcakes1.jpg" alt="cupcakes1" class="img-cupcake">
             <div class="description_desserts">
                 <h3>Cupcakes</h3>
                 <p class="price">R$ 7,00 Unidade</p>
@@ -103,7 +103,7 @@
     <footer>
         <nav class="rodape">
             <figure class="logo_rodape">
-                <img src="/img/logo.png" alt="logo rodape">
+                <img src="logo.png" alt="logo rodape">
             </figure>
             <h3>Localização</h3>
             <section class="mapa">
