inserção da pasta assets e organizado o documento

--- a/assets/html/aboutus.html
+++ b/assets/html/aboutus.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="aboutus.css">
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/aboutus.css">
     <title>About Us</title>
 </head>
 
@@ -16,26 +16,26 @@
                 Sweet Love Desserts
             </h2>
             <p class="logo">
-                <img src="logo.png" alt="logo">
+                <img src="/assets/img/logo.png" alt="logo">
             </p>
         </div>
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="index.html" title="Home" class="home">Home</a>
+                    <a href="/index.html" title="Home" class="home">Home</a>
                 </li>
                 <li>
-                    <a href="desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
+                    <a href="/assets/html/desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
                 </li>
                 <li>
-                    <a href="aboutus.html" title="Sobre" class="sobre">Sobre</a>
+                    <a href="/assets/html/aboutus.html" title="Sobre" class="sobre">Sobre</a>
                 </li>
             </ul>
         </nav>
     </header>
     <h3>Sobre Nós</h3>
     <section class="about">
-        <img src="loja.jpg" alt="loja" class="loja">
+        <img src="/assets/img/loja.jpg" alt="loja" class="loja">
         <div class="about-us_description">
             <p>
                 Bem-vindo à nossa confeitaria, um verdadeiro paraíso dos sabores desde 2010! Aqui, dedicamos
@@ -72,7 +72,7 @@
     <footer>
         <nav class="rodape">
             <figure class="logo_rodape">
-                <img src="logo.png" alt="logo rodape">
+                <img src="/assets/img/logo.png" alt="logo rodape">
             </figure>
             <h3>Localização</h3>
             <section class="mapa">
@@ -83,10 +83,7 @@
                     <p>Horário de funcionamento: 10h00 às 22h00</p>
                     <p>(11) 2568-0631</p>
                     <div class="localization1">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.8531875267613!2d-46.39968762534483!3d-23.501796959405265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce637e66c9ec69%3A0xb0b6dcb1a4a65dcd!2sR.%20Valente%20de%20Novais%2C%2062%20-%20Itaim%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008120-420!5e0!3m2!1spt-BR!2sbr!4v1691335433231!5m2!1spt-BR!2sbr"
-                            width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.8531875267613!2d-46.39968762534483!3d-23.501796959405265!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce637e66c9ec69%3A0xb0b6dcb1a4a65dcd!2sR.%20Valente%20de%20Novais%2C%2062%20-%20Itaim%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008120-420!5e0!3m2!1spt-BR!2sbr!4v1691335433231!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 <div class="localization">
@@ -96,10 +93,7 @@
                     <p>Horário de funcionamento: 10h00 às 22h00</p>
                     <p>(11) 2031-4221</p>
                     <div class="localization2">
-                        <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.9591212370938!2d-46.444593125344866!3d-23.497981859265437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce616102285555%3A0x33b9c899fc66c60d!2sAv.%20Pires%20do%20Rio%2C%20175%20-%20S%C3%A3o%20Miguel%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008020-000!5e0!3m2!1spt-BR!2sbr!4v1691335632703!5m2!1spt-BR!2sbr"
-                            width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.9591212370938!2d-46.444593125344866!3d-23.497981859265437!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce616102285555%3A0x33b9c899fc66c60d!2sAv.%20Pires%20do%20Rio%2C%20175%20-%20S%C3%A3o%20Miguel%20Paulista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2008020-000!5e0!3m2!1spt-BR!2sbr!4v1691335632703!5m2!1spt-BR!2sbr" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </section>
