--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="/assets/css/global.css">
+    <link rel="stylesheet" href="/assets/css/style.css"> 
     <title>Sweet Love Desserts</title>
 </head>
 
@@ -16,19 +16,19 @@
                 Sweet Love Desserts
             </h2>
             <p class="logo">
-                <img src="logo.png" alt="logo">
+                <img src="/assets/img/logo.png" alt="logo">
             </p>
         </div>
         <nav class="menu">
             <ul>
                 <li>
-                    <a href="index.html" title="Home" class="home">Home</a>
+                    <a href="/index.html" title="Home" class="home">Home</a>
                 </li>
                 <li>
-                    <a href="desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
+                    <a href="/assets/html/desserts.html" title="Cardápio" class="cardapio">Cardápio</a>
                 </li>
                 <li>
-                    <a href="aboutus.html" title="Sobre" class="sobre">Sobre</a>
+                    <a href="/assets/html/aboutus.html" title="Sobre" class="sobre">Sobre</a>
                 </li>
             </ul>
         </nav>
@@ -39,7 +39,7 @@
     </section>
 
     <section class="description">
-        <img src="macaron.jpg" alt="store products" class="img-macaron">
+        <img src="/assets/img/macaron.jpg" alt="store products" class="img-macaron">
         <div class="text_description">
             <p>
                 Bem-vindo à nossa humilde e encantadora loja de sobremesas! Aqui, acreditamos que a beleza está na
@@ -63,7 +63,7 @@
     <footer>
         <nav class="rodape">
             <figure class="logo_rodape">
-                <img src="logo.png" alt="logo rodape">
+                <img src="/assets/img/logo.png" alt="logo rodape">
             </figure>
             <h3>Localização</h3>
             <section class="mapa">
